add vault connection
add java implementation
update api
remove node.js
fix testing
