# api/api.yaml
@@ -52,39 +52,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HealthStatus'
-  '/token':
-    post:
-      tags:
-        - Token
-      description: Generates a DLT token based on the current CanisMajor config.
-      operationId: generateToken
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TokenKeys'
-      responses:
-        '200':
-          description: Token to be used with the given DLT.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DLTToken'
-        '400':
-          description: Keys provided in the request are not valid.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-        '403':
-          description: Keys provided in the request are not a valid account.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-
-  # token info endpoint removed - leakage of secure data by design...
 
   '/config':
     post:
@@ -197,8 +164,10 @@ paths:
       tags:
         - NGSI-LD
       parameters:
-        - $ref: '#/components/parameters/dltToken'
         - $ref: '#/components/parameters/link'
+        - $ref: '#/components/parameters/walletType'
+        - $ref: '#/components/parameters/walletToken'
+        - $ref: '#/components/parameters/walletAddress'
       description: Entity creation requests.
       operationId: createNgsiLDEntity
       requestBody:
@@ -242,8 +211,10 @@ paths:
         - NGSI-LD
       parameters:
         - $ref: '#/components/parameters/link'
-        - $ref: '#/components/parameters/dltToken'
         - $ref: '#/components/parameters/entityId'
+        - $ref: '#/components/parameters/walletType'
+        - $ref: '#/components/parameters/walletToken'
+        - $ref: '#/components/parameters/walletAddress'
       description: EntityUpdate requests.
       operationId: postUpdateNgsiLDEntity
       requestBody:
@@ -327,7 +298,7 @@ components:
       description: Header to contain the dlt-token
       in: header
       required: true
-      schema: 
+      schema:
         type: string
     entityId:
       name: entityId
@@ -337,6 +308,35 @@ components:
       schema:
         type: string
         format: uri
+    walletType:
+      name: Wallet-Type
+      description: Type of the wallet to be used for signing the transactions.
+      in: header
+      required: false
+      schema:
+        type: string
+        enum:
+          - vault
+    walletAddress:
+      name: Wallet-Address
+      description: |
+        Address of the wallet to be used for signing the transactions. 
+        If required, it should include path information
+      example: http://my-vault.org/v1/ethereum/accounts/bob
+      in: header
+      required: false
+      schema:
+        type: string
+        format: url
+    walletToken:
+      name: Wallet-Token
+      description: |
+        Token to be used when contacting the wallet. Type of the token depends on the 
+        wallet type.
+      in: header
+      required: false
+      schema:
+        type: string
   schemas:
     MetaData:
       type: object
@@ -730,9 +730,9 @@ components:
           type: string
         type:
           type: string
-        topics: 
+        topics:
           type: array
-          items: 
+          items:
             type: string
         transactionIndexRaw:
           type: string
@@ -745,7 +745,7 @@ components:
       properties:
         transactionHash:
           type: string
-        blockHash: 
+        blockHash:
           type: string
         blockNumber:
           type: integer
@@ -758,7 +758,7 @@ components:
           format: int64
         status:
           type: string
-        from: 
+        from:
           type: string
         to:
           type: string
